--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt nostrum quos expedita itaque repellendus libero. Quam ea repudiandae commodi officiis quasi veniam eveniet obcaecati, nemo deserunt ratione fuga ullam qui.</p>
+
+    <div class="contain">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ex.</div>
 </body>
 </html>
